# WISE

./: .gitmodules
backend/: .dockerignore  .env.example  .gitignore  main.py  manage.py  pyproject.toml
backend/account/: admin.py  apps.py  endpoints.py  exceptions.py  models.py  permissions.py  routers.py  schemas.py  selectors.py  services.py  tests.py  views.py
backend/account/migrations/: 0001_initial.py  0002_remove_customuser_first_name_and_more.py
backend/account/templates/: active_email.html  password_reset_email.html
backend/ai/: admin.py  apps.py  endpoints.py  exceptions.py  llms.py  models.py  prompts.py  schemas.py  selectors.py  services.py  tests.py  views.py
backend/ai/chains/: classify_intention_chain.py  generate_chapter_chain.py  (+1 more)
backend/backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/book/: admin.py  apps.py  endpoints.py  exceptions.py  models.py  permissions.py  routers.py  schemas.py  selectors.py  serializers.py  services.py  tests.py  views.py
backend/core/: admin.py  api.py  apps.py  asgi.py  endpoints.py  exceptions.py  permissions.py  routers.py  schemas.py  selectors.py  services.py  settings.py  tests.py  urls.py  wsgi.py
backend/scripts/: collectstatic.bat  createsuperuser.bat  initdatabase.bat  makemigrations.bat  migrate.bat  runserver-asgi.bat  runserver-asgi.bat.example  runserver.bat  runserver.bat.example  scripts.py  startapp.bat  test.bat
backend/utils/: authentication_util.py  debug_util.py  exception_util.py  file_util.py  log_util.py  path_util.py  prompt_util.py  secret_key_util.py  sse_util.py
(+32 files in other folders)
